--- a/Insurance Project/src/main/resources/templates/User/register-Page.html
+++ b/Insurance Project/src/main/resources/templates/User/register-Page.html
@@ -5,38 +5,42 @@
     <title>Register</title>
 </head>
 <body>
-    <!--<div></div> ZDE JE DIV S FLASH MESSAGE O CHYBÁCH-->
+
+
+    <!-- ZDE JE DIV S FLASH MESSAGE O CHYBÁCH-->
+    <div style="color:red" class="flash-message message-error" th:text="${error}" th:if="${error}"> </div>
+
     <h1>This is Register Page</h1>
     <form th:action="@{/register}" th:object="${userDTO}" method="post" ><!-- nezapomenout atribut method, potřeba je th:action a th:object -->
         <div>
             <label for="uname">User name:</label><br>
             <input type="text" id="uname" name="uname" th:field="*{userName}"><br>
-            <small th:errors="*{userName}"></small>
+            <small style="color:red" th:errors="*{userName}"></small>
         </div>
         <div>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" th:field="*{email}"><br>
-            <small th:errors="*{email}"></small>
+            <small style="color:red" th:errors="*{email}"></small>
         </div>
         <div>
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname" th:field="*{firstName}"><br>
-            <small th:errors="*{firstName}"></small>
+            <small style="color:red" th:errors="*{firstName}"></small>
         </div>
         <div>
             <label for="lname">Last name:</label><br>
             <input type="text" id="lname" name="lname" th:field="*{lastName}"><br>
-            <small th:errors="*{lastName}"></small>
+            <small style="color:red" th:errors="*{lastName}"></small>
         </div>
         <div>
             <label for="pass"> Password:</label><br>
             <input type="password" id="pass" name="pw" th:field="*{password}"><br> <!-- použít requied? minnlength a maxlength? -->
-            <small th:errors="*{password}"></small>
+            <small style="color:red" th:errors="*{password}"></small>
         </div>
         <div>
             <label for="confirm"> Confirm password: </label><br>
             <input type="password" id="confirm" name="confirm" th:field="*{confirmPassword}"><br>
-            <small th:errors="*{confirmPassword}"></small>
+            <small style="color:red" th:errors="*{confirmPassword}"></small>
         </div>
         <div>
             <input type="submit" value="Register"> <br>
