--- a/Insurance Project/src/main/resources/templates/landing-Page.html
+++ b/Insurance Project/src/main/resources/templates/landing-Page.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
+
+<html lang="cs-cz" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <html lang="cs-cz">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+
+    <!-- ZDE JE DIV S SUCCCESS MESSAGE-->
+    <div style="color:green" class="flash-message message-success" th:text="${success}" th:if="${success}"></div>
+
+
     <h1>This is landing Page</h1>
     <a href="/login">login</a>
     <a href="/register"> register </a>
