delete useless profile files

--- a/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
+++ b/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
@@ -5,13 +5,13 @@
     <title>Profile</title>
 </head>
 <body>
+<h1>This is your profile page</h1>
+ <!--   <h1>This is Your Profile Page</h1>
+    <p>First name:<span th:text="${userDTO.firstName}">...</span></p>
+    <p>Last name:<span th:text="${userDTO.lastName}">...</span></p>
+    <p>email:<span th:text="${userDTO.email}">...</span></p>
 
-    <h1>This is Your Profile Page</h1>
-    <p>First name:<span th:text="${userDTO.firstName}">...</span></p><br>
-    <p>First name:<span th:text="${userDTO.lastName}">...</span></p><br>
-    <p>First name:<span th:text="${userDTO.email}">...</span></p><br>
-
-
+-->
 
 
 </body>
