add updateProfile method

--- a/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
+++ b/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
@@ -19,7 +19,9 @@
     <p>Date of birth: <span th:text="${userDTO.dateOfBirth}">...</span></p>
     <p>SSN/The birth number: <span th:text="${userDTO.socialSecurityNumber}">...</span></p>
 
-
+    <a th:href="@{/profile/update}">
+        <button type = button>Change my details</button>
+    </a>
 
 </body>
 </html>
