--- a/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
+++ b/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <header th:replace="~{Fragments/layout.html :: header}"></header>
+    <div style="color:green" class="flash-message message-success" th:text="${success}" th:if="${success}"></div>
+
     <h1>This is your profile page</h1>
 
     <p>First name: <span th:text="${userDTO.firstName}">...</span></p>
