--- a/Insurance Project/src/main/resources/templates/Insurance/myInsurances-Page.html
+++ b/Insurance Project/src/main/resources/templates/Insurance/myInsurances-Page.html
@@ -18,12 +18,14 @@
         </p>
 
         <ul>
-            <li th:each="insurance: ${insurances}"></li>
-                <h2><a th:href="@{'/insurance/' + ${insurance.insuranceId}}" th:text="${insurance.insuranceType}"></a></h2>
-            <p>
-                <a href="#">Edit</a>
-                <a href="#">Delete</a>
-            </p>
+            <li th:each="insurance: ${insurances}">
+                <h2><a th:href="@{'/insurance/' + ${insurance.insuranceId}}" th:text="${insurance.insuranceType}"></a>
+                </h2>
+                <p>
+                    <a href="#">Edit</a>
+                    <a href="#">Delete</a>
+                </p>
+            </li>
         </ul>
     </section>
 </article>
