--- a/Insurance Project/src/main/resources/templates/Fragments/layout.html
+++ b/Insurance Project/src/main/resources/templates/Fragments/layout.html
@@ -10,18 +10,20 @@
             <div>
                 <ul>
                     <li><a sec:authorize="isAuthenticated()" href="/home">Home</a></li>
-                    <li>My insurances</li>
+                    <li><a sec:authorize="isAuthenticated()" href="/insurance">My insurances</a></li>
+
                     <li>Users</li>
                     <li>Events</li>
                     <li><a sec:authorize="isAuthenticated()" href="/profile">Profile</a></li>
 
-                    <li>about us</li>
-                    <li>contact</li>
+                    <li>About us</li>
+                    <li>Contact</li>
+
                     <li><a sec:authorize="isAnonymous" href="/login">login</a></li>
                     <li><a sec:authorize="isAnonymous" href="/register"> register </a> </li>
                     <li>
                         <form method="post" th:action="@{/logout}">
-                            <button sec:authorize="isAuthenticated()">Odhlásit se</button>
+                            <button sec:authorize="isAuthenticated()">Log out</button>
                         </form>
                     </li>
                 </ul>
