--- a/Insurance Project/src/main/resources/templates/Event/updateEvent-Page.html
+++ b/Insurance Project/src/main/resources/templates/Event/updateEvent-Page.html
@@ -9,7 +9,7 @@
 <article>
     <header>You can edit your insurance event here</header>
     <section>
-        <form th:action="@{'insurance/events/' + ${eventId} +'edit'}" th:object="${eventDTO}" method="post">
+        <form th:action="@{'/insurance/events/' + ${eventId} + '/edit'}" th:object="${eventDTO}" method="post">
             <div>
                 <label for="eventDescription">Event description:</label><br>
                 <textarea id="eventDescription" name="eventDescription" th:field="*{eventDescription}"></textarea><br>
