--- a/Insurance Project/src/main/resources/templates/Event/updateEvent-Page.html
+++ b/Insurance Project/src/main/resources/templates/Event/updateEvent-Page.html
@@ -19,11 +19,11 @@
                 <small style="color:red" th:errors="*{eventDate}"></small>
             </div>
             <div>
-                <input type="submit" value="Edit insurance event">
+                <input class="input-btn button" type="submit" value="Edit insurance event">
             </div>
         </form>
         <a th:href="@{/insurance/events}">
-            <button>Back to Events</button>
+            <button class="back-btn button">Back to Events</button>
         </a>
     </section>
 </article>
