--- a/Insurance Project/src/main/resources/templates/Insurance/updateInsurance-Page.html
+++ b/Insurance Project/src/main/resources/templates/Insurance/updateInsurance-Page.html
@@ -38,11 +38,11 @@
                 <small style="color:red" th:errors="*{endDate}"></small>
             </div>
             <div>
-                <input type="submit" value="Edit"> <br>
+                <input class="input-btn button" type="submit" value="Edit"> <br>
             </div>
         </form>
         <a th:href="@{/insurance}">
-            <button>Back</button>
+            <button class="back-btn">Back</button>
         </a>
     </section>
 </article>
