--- a/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
+++ b/Insurance Project/src/main/resources/templates/Profile/profile-Page.html
@@ -22,7 +22,7 @@
         <p>SSN/The birth number: <span th:text="${userDTO.socialSecurityNumber}">...</span></p>
 
         <a th:href="@{/profile/update}">
-            <button type=button>Change my details</button>
+            <button class="edit-btn button" type=button>Change my details</button>
         </a>
     </section>
 </article>
