--- a/Insurance Project/src/main/resources/templates/Profile/updateProfile-Page.html
+++ b/Insurance Project/src/main/resources/templates/Profile/updateProfile-Page.html
@@ -64,7 +64,7 @@
                 <small style="color:red" th:errors="*{socialSecurityNumber}"></small>
             </div>
             <div>
-                <input type="submit" value="Update"> <br>
+                <input class="input-btn button" type="submit" value="Update"> <br>
             </div>
         </form>
 
