--- a/Insurance Project/src/main/resources/templates/User/login-Page.html
+++ b/Insurance Project/src/main/resources/templates/User/login-Page.html
@@ -22,7 +22,7 @@
 
             </div>
             <div>
-                <input type="submit" value="Log in">
+                <input class="input-btn button" type="submit" value="Log in">
             </div>
         </form>
     </section>
