--- a/Insurance Project/src/main/resources/templates/User/register-Page.html
+++ b/Insurance Project/src/main/resources/templates/User/register-Page.html
@@ -81,7 +81,7 @@
                 <small style="color:red" th:errors="*{socialSecurityNumber}"></small>
             </div>
             <div>
-                <input type="submit" value="Register"> <br>
+                <input class="input-btn button" type="submit" value="Register"> <br>
             </div>
         </form>
     </section>
