--- a/Insurance Project/src/main/resources/static/styles/styles.css
+++ b/Insurance Project/src/main/resources/static/styles/styles.css
@@ -1,30 +1,220 @@
+@font-face {
+    font-family: Lora;
+    src: url(../fonts/Lora-Regular.ttf);
+    font-weight: normal;
+}
+@font-face {
+    font-family: Lora;
+    src: url(../fonts/Lora-Bold.ttf);
+    font-weight: bold;
+}
+@font-face {
+    font-family: Raleway;
+    src: url(../fonts/Raleway-Regular.ttf);
+    font-weight: normal;
+}
+
 html{
-    background-color:#386641; /*tmavě zelená*/
+    background-color:#080a16; /*velmi tmavě modrá*/
 }
 
  body{
-    background-color:#ecf0f1; /*světle šedá*/
+    font: 14px "Lora", sans-serif;
+    background-color:#f5f8fa; /*světle šedá*/
     width:100%;
     box-sizing:border-box;
     margin:0;
  }
 
+ body>header{
+    background-color: #386641; /*tmavě zelená*/
+    font: 20px "Raleway", sans-serif;
+ }
+
  nav ul{
+    width: 100%;
+    padding:0;
     margin:0;
     list-style-type:none;
     display: flex;
-    align-item: center;
+    justify-content: space-between;
+    align-items: center;
  }
 
+ nav ul li{
+    padding: 0 5px;
+    margin: 0;
+    line-height: 4em;
+    color: #f5f8fa; /*světle šedá*/
+ }
+
+ nav ul a{
+    position: relative;
+    text-decoration: none;
+    color: #f5f8fa; /*světle šedá*/
+    text-transform: uppercase;
+    padding: 8px 0;
+    transition: 0.3s ease;
+    padding: 10px 15px;
+    border-radius: 10px;
+ }
+
+ nav ul a:hover{
+    font-size: 22px;
+    background-color: #6a994e;
+    text-shadow: 2px 2px 4px rgba(0, 0,0, 0.3);
+ }
+
+ header{
+    text-align: end;
+ }
+
+ button{
+    padding: 10px 15px;
+    margin: 5px 10px;
+    border-radius: 10px;
+    border: 2px solid #f5f8fa;
+ }
+
+ .logout{
+    text-transform: uppercase;
+    font-size: 20px;
+    background-color: #bc4749;
+    color: #f5f8fa;
+    transition: 0.3s ease;
+ }
+
+ .logout:hover{
+    background-color: #822f31;
+    font-size: 22px;
+ }
+
+ /*formuláře*/
+
+ article{
+    padding: 20px 0;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+ }
+
+
+
+ section>form{
+    border: #6a994e solid 2px;
+    box-shadow: 3px 2px 10px #386641;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #a7c95711;
+    flex-direction: column;
+
+}
+
+label{
+    padding: 3px;
+    margin: 0px;
+    font-size: 16px;
+}
+.input{
+    padding: 7px 5px;
+    margin: 10px 0px;
+    line-height: 2px;
+    width: 40vb;
+    border-radius: 5px;
+    border: #386641 solid 2px;
+}
+.input-btn{
+    background-color: #6a994e;
+    color: #f5f8fa;
+    border: 2px solid #386641;
+
+}
+.button{
+    font-size: 16px;
+    padding: 10px 15px;
+    margin: 5px 10px;
+    border-radius: 10px;
+
+}
+
+
  footer{
-    background-color: #386641; /*tmavě zelená*/
-    color:#ecf0f1; /*světle šedá*/
+    background-color: #080a16; /*velmi tmavě modrá*/
+    color:#f5f8fa; /*světle šedá*/
     text-align: center;
-    padding: 50px;
+    padding: 20px 20px;
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1;
  }
 
  footer a{
-    color:#ecf0f1; /*světle šedá*/
+    color:#f5f8fa; /*světle šedá*/
     text-decoration:none;
-
  }
+
+
+
+
+ /* navigation menu pro malé obrazovky*/
+ .hamburger{
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    color: #f5f8fa; /*světle šedá*/
+    padding: 10px;
+ }
+
+ .menu{
+    display: flex;
+ }
+
+
+ @media screen and (max-width: 1024px){
+    .hamburger{
+        display: block;
+    }
+    .menu{
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+    .menu.active{
+        display: flex;
+    }
+    nav ul{
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+    }
+    nav ul li{
+        padding: 5px;
+        margin: 5px;
+        width: 100%;
+        line-height: 2em;
+        box-sizing: border-box;
+    }
+    nav ul li:hover{
+        background-color: #6a994e; /* zelená */
+        overflow: hidden;
+    }
+
+    .menu .logout{
+        background-color: #bc4749;
+        border: 2px solid #f5f8fa;
+        width: 100%;
+        padding: 15px 0;
+        margin: auto;
+    }
+    .menu .logout:hover{
+        background-color: #822f31;
+    }
+
+
+ };
+
