--- a/Insurance Project/src/main/resources/templates/Event/createEvent-Page.html
+++ b/Insurance Project/src/main/resources/templates/Event/createEvent-Page.html
@@ -20,12 +20,12 @@
                 <small style="color:red" th:errors="*{eventDate}"></small>
             </div>
             <div>
-                <input type="submit" value="Create insurance event">
+                <input class="input-btn button" type="submit" value="Create insurance event">
             </div>
         </form>
 
         <a th:href="@{/insurance}">
-            <button>Back</button>
+            <button class="back-btn button">Back</button>
         </a>
     </section>
 </article>
