--- a/Insurance Project/src/main/resources/templates/Event/eventDetail-Page.html
+++ b/Insurance Project/src/main/resources/templates/Event/eventDetail-Page.html
@@ -12,11 +12,11 @@
         <p>Description of Event: <span th:text="${event.eventDescription}">...</span></p>
         <p>Date of Event: <span th:text="${event.eventDate}">...</span></p>
         <p>
-            <a th:href="@{${event.eventId} + '/edit'}">Edit</a>
-            <a th:href="@{${event.eventId} + '/delete'}">Delete</a>
+            <a class="edit-btn button" th:href="@{${event.eventId} + '/edit'}">Edit</a>
+            <a class="delete-btn button" th:href="@{${event.eventId} + '/delete'}">Delete</a>
         </p>
         <a th:href="@{/insurance/events}">
-            <button>Back</button>
+            <button class="input-btn button">Back</button>
         </a>
     </section>
 </article>
