--- a/Insurance Project/src/main/resources/templates/Insurance/createInsurance-Page.html
+++ b/Insurance Project/src/main/resources/templates/Insurance/createInsurance-Page.html
@@ -38,12 +38,12 @@
                 <small style="color:red" th:errors="*{endDate}"></small>
             </div>
             <div>
-                <input type="submit" value="Create insurance"> <br>
+                <input class="input-btn button" type="submit" value="Create insurance"> <br>
             </div>
         </form>
 
         <a th:href="@{/insurance}">
-            <button>Back</button>
+            <button class="back-btn button">Back</button>
         </a>
     </section>
 </article>
