--- a/Insurance Project/src/main/resources/templates/Insurance/insuranceDetail-Page.html
+++ b/Insurance Project/src/main/resources/templates/Insurance/insuranceDetail-Page.html
@@ -14,14 +14,14 @@
         <p>Start of insurance: <span th:text="${insurance.startDate}">...</span></p>
         <p>End of insurance: <span th:text="${insurance.endDate}">...</span></p>
         <p>
-            <a th:href="@{'edit/' + ${insurance.insuranceId}}">Edit</a>
-            <a th:href="@{'delete/' + ${insurance.insuranceId}}">Delete</a>
+            <a class="edit-btn button" th:href="@{'edit/' + ${insurance.insuranceId}}">Edit</a>
+            <a class="delete-btn button" th:href="@{'delete/' + ${insurance.insuranceId}}">Delete</a>
         </p>
         <a th:href="@{'/insurance/' + ${insurance.insuranceId} + '/event/create'}">
-            <button>Create insurance event</button>
+            <button class="input-btn button">Create insurance event</button>
         </a>
         <a th:href="@{/insurance}">
-            <button>Back</button>
+            <button class="back-btn button">Back</button>
         </a>
     </section>
 </article>
