--- a/Insurance Project/src/main/resources/templates/Insurance/myInsurances-Page.html
+++ b/Insurance Project/src/main/resources/templates/Insurance/myInsurances-Page.html
@@ -19,11 +19,11 @@
                 <h2><a th:href="@{'/insurance/' + ${insurance.insuranceId}}" th:text="${insurance.insuranceType}"></a>
                 </h2>
                 <a th:href="@{'/insurance/' + ${insurance.insuranceId} + '/event/create'}">
-                    <button>Create insurance event</button>
+                    <button class="input-btn button">Create insurance event</button>
                 </a>
                 <p>
-                    <a th:href="@{'insurance/edit/' + ${insurance.insuranceId}}">Edit</a>
-                    <a th:href="@{'insurance/delete/' + ${insurance.insuranceId}}">Delete</a>
+                    <a class="edit-btn button" th:href="@{'insurance/edit/' + ${insurance.insuranceId}}">Edit</a>
+                    <a class="delete-btn button" th:href="@{'insurance/delete/' + ${insurance.insuranceId}}">Delete</a>
                 </p>
             </li>
         </ul>
