CSS forms and buttons

--- a/Insurance Project/src/main/resources/templates/Event/createEvent-Page.html
+++ b/Insurance Project/src/main/resources/templates/Event/createEvent-Page.html
@@ -7,26 +7,26 @@
 <article>
     <header>You can create your insurance event here</header>
     <section>
-        <form  th:action="@{'/insurance/' + ${eventDTO.insuranceId} + '/event/create'}" th:object="${eventDTO}" method="post">
+        <form th:action="@{'/insurance/' + ${eventDTO.insuranceId} + '/event/create'}" th:object="${eventDTO}"
+              method="post">
             <input type="hidden" name="insuranceId" th:value="${eventDTO.insuranceId}">
-            <div>
+            <div class="input">
                 <label for="eventDescription">Event description:</label><br>
                 <textarea id="eventDescription" name="eventDescription" th:field="*{eventDescription}"></textarea><br>
                 <small style="color:red" th:errors="*{eventDescription}"></small>
             </div>
-            <div>
+            <div class="input">
                 <label for="eventDate">Event date:</label><br>
                 <input type="date" id="eventDate" name="eventDate" th:field="*{eventDate}"><br>
                 <small style="color:red" th:errors="*{eventDate}"></small>
             </div>
-            <div>
-                <input class="input-btn button" type="submit" value="Create insurance event">
-            </div>
+            <input class="input-btn button" type="submit" value="Create insurance event">
         </form>
-
-        <a th:href="@{/insurance}">
-            <button class="back-btn button">Back</button>
-        </a>
+        <p>
+            <a th:href="@{/insurance}">
+                <button class="back-btn button">Back</button>
+            </a>
+        </p>
     </section>
 </article>
 <footer th:replace="~{Fragments/layout.html :: footer}"></footer>
