--- a/Insurance Project/src/main/resources/static/styles/styles.css
+++ b/Insurance Project/src/main/resources/static/styles/styles.css
@@ -3,11 +3,13 @@
     src: url(../fonts/Lora-Regular.ttf);
     font-weight: normal;
 }
+
 @font-face {
     font-family: Lora;
     src: url(../fonts/Lora-Bold.ttf);
     font-weight: bold;
 }
+
 @font-face {
     font-family: Raleway;
     src: url(../fonts/Raleway-Regular.ttf);
@@ -25,6 +27,14 @@ html{
     box-sizing:border-box;
     margin:0;
  }
+
+ a{
+    text-decoration: none;
+ }
+
+  p{
+     font-size: 16px;
+  }
 
  body>header{
     background-color: #386641; /*tmavě zelená*/
@@ -50,7 +60,6 @@ html{
 
  nav ul a{
     position: relative;
-    text-decoration: none;
     color: #f5f8fa; /*světle šedá*/
     text-transform: uppercase;
     padding: 8px 0;
@@ -101,8 +110,6 @@ html{
     height: auto;
  }
 
-
-
  section>form{
     border: #6a994e solid 2px;
     box-shadow: 3px 2px 10px #386641;
@@ -110,7 +117,6 @@ html{
     border-radius: 10px;
     background-color: #a7c95711;
     flex-direction: column;
-
 }
 
 label{
@@ -118,28 +124,69 @@ label{
     margin: 0px;
     font-size: 16px;
 }
-.input{
-    padding: 7px 5px;
+.input input{
+    padding: 5px 10px;
     margin: 10px 0px;
-    line-height: 2px;
+    font-size: 16px;
     width: 40vb;
     border-radius: 5px;
     border: #386641 solid 2px;
 }
+.input select{
+    padding: 5px 10px;
+    margin: 10px 0px;
+    font-size: 16px;
+    width: 43vb;
+    border-radius: 5px;
+    border: #386641 solid 2px;
+}
+
+.input textarea{
+    padding: 5px 10px;
+    margin: 10px 0px;
+    font-size: 16px;
+    width: 40vb;
+    height: 20vh;
+    border-radius: 5px;
+    border: #386641 solid 2px;
+}
+
 .input-btn{
     background-color: #6a994e;
-    color: #f5f8fa;
     border: 2px solid #386641;
+    color: #f5f8fa;
 
 }
+
+.edit-btn{
+    background-color: #f2e8cf;
+    border: 2px solid #bf9a35;
+    color: #bf9a35;
+}
+
+.back-btn{
+    background-color: #6b79cd;
+    border: 2px solid #3a4bac;
+    color: #f5f8fa;
+}
+
+.delete-btn{
+    background-color: #bc4749;
+    border: 2px solid #822f31;
+    color: #f5f8fa;
+}
+
 .button{
     font-size: 16px;
     padding: 10px 15px;
-    margin: 5px 10px;
+    margin: 10px 0px;
     border-radius: 10px;
-
+    transition: 0.3s ease-in;
 }
 
+.button:hover{
+    font-size: 18px;
+}
 
  footer{
     background-color: #080a16; /*velmi tmavě modrá*/
@@ -154,11 +201,7 @@ label{
 
  footer a{
     color:#f5f8fa; /*světle šedá*/
-    text-decoration:none;
  }
-
-
-
 
  /* navigation menu pro malé obrazovky*/
  .hamburger{
@@ -178,20 +221,24 @@ label{
     .hamburger{
         display: block;
     }
+
     .menu{
         display: none;
         flex-direction: column;
         width: 100%;
         text-align: center;
     }
+
     .menu.active{
         display: flex;
     }
+
     nav ul{
         flex-direction: column;
         width: 100%;
         padding: 0;
     }
+
     nav ul li{
         padding: 5px;
         margin: 5px;
@@ -199,6 +246,7 @@ label{
         line-height: 2em;
         box-sizing: border-box;
     }
+
     nav ul li:hover{
         background-color: #6a994e; /* zelená */
         overflow: hidden;
@@ -211,10 +259,8 @@ label{
         padding: 15px 0;
         margin: auto;
     }
+
     .menu .logout:hover{
         background-color: #822f31;
     }
-
-
  };
-
