--- a/Insurance Project/src/main/resources/templates/Event/eventDetail-Page.html
+++ b/Insurance Project/src/main/resources/templates/Event/eventDetail-Page.html
@@ -14,10 +14,10 @@
         <p>
             <a class="edit-btn button" th:href="@{${event.eventId} + '/edit'}">Edit</a>
             <a class="delete-btn button" th:href="@{${event.eventId} + '/delete'}">Delete</a>
+            <a th:href="@{/insurance/events}">
+                <button class="back-btn button">Back</button>
+            </a>
         </p>
-        <a th:href="@{/insurance/events}">
-            <button class="input-btn button">Back</button>
-        </a>
     </section>
 </article>
 <footer th:replace="~{Fragments/layout.html :: footer}"></footer>
