--- a/Insurance Project/src/main/resources/static/styles/styles.css
+++ b/Insurance Project/src/main/resources/static/styles/styles.css
@@ -187,7 +187,7 @@ label{
 .button{
     font-size: 16px;
     padding: 10px 15px;
-    margin: 10px 0px;
+    margin:  0px;
     border-radius: 10px;
     transition: 0.3s ease-in;
 }
