--- a/Insurance Project/src/main/resources/templates/Event/myEvents-Page.html
+++ b/Insurance Project/src/main/resources/templates/Event/myEvents-Page.html
@@ -20,10 +20,14 @@
                         </a>
                     </div>
                     <p>Event description: <span th:text="${event.eventDescription}">...</span></p>
+                    <!-- TU JE DATUM VE ŠPATNÉM FORMÁTU
                     <p>Event date: <span th:text="${event.eventDate}">...</span></p>
+                    -->
                     <div class="button-container">
-                        <a class="edit-btn button" th:href="@{'events/' + ${event.eventId} + '/edit'}">Edit</a>
-                        <a class="delete-btn button" th:href="@{'events/' + ${event.eventId} + '/delete'}">Delete</a>
+                        <a class="edit-btn button" th:href="@{'events/' + ${event.eventId} + '/edit'}">
+                            <img th:src="@{/images/editing.png}" alt="edit-icon" class="icon"> Edit</a>
+                        <a class="delete-btn button" th:href="@{'events/' + ${event.eventId} + '/delete'}">
+                            <img th:src="@{/images/delete.png}" alt="delete-icon" class="icon invert">Delete</a>
                     </div>
                 </li>
             </ul>
