--- a/Insurance Project/src/main/resources/templates/aboutUs-Page.html
+++ b/Insurance Project/src/main/resources/templates/aboutUs-Page.html
@@ -30,6 +30,9 @@
                     <img th:src="@{/images/download.png}" alt="download-icon" class="icon invert">
                     Download CV (AJ)</a>
             </div>
+            <div>
+
+            </div>
         </div>
         <img th:src="@{/images/My-photo.jpg}" alt="my-photo" class="profile-img">
     </section>
